      upgrades, and we already have the automatic per-file symlinking.
    - debian/rules: Add an epoch to libgudev.
    - Don't build the systemd-sysv package for now.
    - Drop 80-networking.rules and the Debian *.agent scripts, we never
      supported them in Ubuntu.
    - Keep our much simpler udev maintainer scripts (all platforms must
      support udev, no debconf).

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 22:13:02 +0200

systemd (204-11) UNRELEASED; urgency=medium

  * Explain patch management in debian/README.source.

 -- Martin Pitt <mpitt@debian.org>  Sun, 27 Apr 2014 12:51:55 +0200

systemd (204-10) unstable; urgency=medium

  * In the udeb's udev.startup, make sure that /dev/pts exists.
  * systemd-logind-launch: Set the #files ulimit, for unprivileged LXC
    containers.
  * Drop udev.NEWS, it only applies to pre-squeeze.
  * Remove /var/log/udev on purge.
  * Always probe cpu support drivers. (LP #1207705)
  * On Dell PowerEdge systems, the iDRAC7 and later support a USB Virtual NIC
    for management. Name this interface "idrac" to avoid confusion with "real"
    network interfaces.
  * Drop numerical prefixes from patches, to avoid future diff noise when
    removing, cherry-picking, and merging patches. From now on, always use
    "gbp-pq export --no-patch-numbers" to update them.

 -- Martin Pitt <mpitt@debian.org>  Sun, 27 Apr 2014 11:53:52 +0200

systemd (204-9) unstable; urgency=medium

  * The "Flemish Beef and Beer Stew" release.

  [ Steve Langasek ]
  * Do proper refcounting of the PAM module package on prerm, so that we
    don't drop the module from the PAM config when uninstalling a
    foreign-arch package.  Related to Ubuntu bug #1295521.

  [ Martin Pitt ]
  * debian/udev.udev-finish.upstart: Fix path to tmp-rules,
    debian/extra/rule_generator.functions creates them in /run/udev/.
  * rules: Remove the kernel-install bits; we don't want that in Debian and