@@ -11,4 +11,5 @@ usr/share/man/man8/*udev*.8
 usr/share/pkgconfig/udev.pc
 
 # Ubuntu
+../../extra/udev.py usr/share/apport/package-hooks
 ../../extra/*.hwdb lib/udev/hwdb.d
