@@ -22,6 +22,7 @@ systemd (204-10ubuntu1) UNRELEASED; urgency=medium
       supported them in Ubuntu.
     - Keep our much simpler udev maintainer scripts (all platforms must
       support udev, no debconf).
+    - Add udev Apport package hook.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 22:13:02 +0200
 
